--- a/entry.html
+++ b/entry.html
@@ -646,7 +646,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="page2.html">Floor Plans</a></li>
-                <li><a href="#services">Services</a></li>
+                <li><a href="page3.html">Applications</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
