updated header and added applications

--- a/index.html
+++ b/index.html
@@ -49,9 +49,13 @@
 
         header p {
             font-size: 1.2em;
-            margin: 10px 0 0 0;
+            margin: 10px auto 0 auto;
             font-style: italic;
             font-weight: normal;
+            color: white;
+            text-align: center;
+            width: 100%;
+            display: block;
         }
 
         /* Navigation Styles - Consistent Navigation */
@@ -240,8 +244,12 @@
 
         footer p {
             text-indent: 0;
-            margin: 5px 0;
+            margin: 5px auto;
             font-style: italic;
+            color: white;
+            text-align: center;
+            width: 100%;
+            display: block;
         }
 
         /* Special Text Styles with various font styling */
