centered and white

--- a/page2.html
+++ b/page2.html
@@ -43,8 +43,12 @@
 
         header p {
             font-size: 1.2em;
-            margin: 10px 0 0 0;
+            margin: 10px auto 0 auto;
             font-style: italic;
+            color: white;
+            text-align: center;
+            width: 100%;
+            display: block;
         }
 
         /* Navigation Styles */
@@ -188,8 +192,12 @@
 
         footer p {
             text-indent: 0;
-            margin: 5px 0;
+            margin: 5px auto;
             font-style: italic;
+            color: white;
+            text-align: center;
+            width: 100%;
+            display: block;
         }
 
         /* Responsive design */
