--- a/living.html
+++ b/living.html
@@ -250,7 +250,9 @@
         <!-- Header Section -->
         <header>
             <h1>REAL LIVING</h1>
-            <p>Your Trusted Real Estate Partner</p>
+            <div style="text-align: center;">
+    <p style="margin: 0 auto; color: white;">Your Trusted Real Estate Partner</p>
+</div>
         </header>
 
         <!-- Navigation Section -->
@@ -324,10 +326,10 @@
         </section>
 
         <!-- Footer Section -->
-        <footer>
-            <p>&copy; 2025 Real Living Real Estate. All Rights Reserved.</p>
-            <p><em>Your Dreams, Our Expertise, Perfect Match!</em></p>
-        </footer>
+        <footer style="text-align: center;">
+    <p style="margin: 0 auto; color: white;">&copy; 2025 Real Living Real Estate. All Rights Reserved.</p>
+    <p style="margin: 0 auto; color: white;"><em>Your Dreams, Our Expertise, Perfect Match!</em></p>
+</footer>
     </div>
 </body>
 </html>
