--- a/master.html
+++ b/master.html
@@ -16,7 +16,6 @@
             color: #333;
         }
 
-        /* Layout structure */
         .container {
             max-width: 1200px;
             margin: 0 auto;
@@ -25,7 +24,6 @@
             box-shadow: 0 0 20px rgba(0,0,0,0.1);
         }
 
-        /* Header Styles */
         header {
             background: linear-gradient(135deg, #2c3e50, #34495e);
             color: white;
@@ -45,9 +43,10 @@
             font-size: 1.2em;
             margin: 10px 0 0 0;
             font-style: italic;
+            color: white;
+            text-align: center;
         }
 
-        /* Navigation Styles */
         nav {
             background-color: #34495e;
             padding: 0;
@@ -81,13 +80,11 @@
             text-decoration: underline;
         }
 
-        /* Section Styles */
         section {
             padding: 40px;
             text-align: center;
         }
 
-        /* Heading Styles */
         h1 {
             color: #2c3e50;
             font-size: 2.2em;
@@ -106,7 +103,6 @@
             display: inline-block;
         }
 
-        /* Paragraph Styles */
         p {
             margin-bottom: 20px;
             text-align: center;
@@ -117,7 +113,6 @@
             margin-right: auto;
         }
 
-        /* Room Features */
         .room-highlight {
             background: linear-gradient(135deg, #f8e8f0, #f1d7e8);
             padding: 30px;
@@ -168,7 +163,6 @@
             display: block;
         }
 
-        /* Suite Features */
         .suite-section {
             background: rgba(142, 68, 173, 0.1);
             padding: 25px;
@@ -215,7 +209,6 @@
             color: #666;
         }
 
-        /* Dimension Box */
         .dimension-box {
             background: #ecf0f1;
             padding: 15px;
@@ -233,7 +226,6 @@
             margin: 0;
         }
 
-        /* Back Button */
         .back-button {
             background: linear-gradient(135deg, #8e44ad, #9b59b6);
             color: white;
@@ -253,7 +245,6 @@
             box-shadow: 0 6px 15px rgba(0,0,0,0.3);
         }
 
-        /* Footer Styles */
         footer {
             background: linear-gradient(135deg, #2c3e50, #34495e);
             color: white;
@@ -266,9 +257,10 @@
             text-indent: 0;
             margin: 5px 0;
             font-style: italic;
+            color: white;
+            text-align: center;
         }
 
-        /* Special Text Styles */
         .highlight {
             color: #e74c3c;
             font-weight: bold;
@@ -287,7 +279,6 @@
             font-style: italic;
         }
 
-        /* Closet Section */
         .closet-section {
             background: rgba(52, 73, 94, 0.1);
             padding: 25px;
@@ -307,13 +298,13 @@
 </head>
 <body>
     <div class="container">
-        <!-- Header Section -->
         <header>
             <h1>REAL LIVING</h1>
-            <p>Your Trusted Real Estate Partner</p>
+            <div style="text-align: center;">
+    <p style="margin: 0 auto;">Your Trusted Real Estate Partner</p>
+</div>
         </header>
 
-        <!-- Navigation Section -->
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -423,10 +414,10 @@
         </section>
 
         <!-- Footer Section -->
-        <footer>
-            <p>&copy; 2025 Real Living Real Estate. All Rights Reserved.</p>
-            <p><em>Your Dreams, Our Expertise, Perfect Match!</em></p>
-        </footer>
+        <footer style="text-align: center;">
+    <p style="margin: 0 auto;">&copy; 2025 Real Living Real Estate. All Rights Reserved.</p>
+    <p style="margin: 0 auto;"><em>Your Dreams, Our Expertise, Perfect Match!</em></p>
+</footer>
     </div>
 </body>
 </html>
