--- a/kitchen.html
+++ b/kitchen.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -39,6 +38,7 @@
       font-size: 1.2em;
       margin-top: 10px;
       font-style: italic;
+      color: white; /* Added white color */
     }
     nav {
       background-color: #34495e;
@@ -172,6 +172,7 @@
     footer p {
       font-style: italic;
       margin: 5px 0;
+      color: white; /* Added white color */
     }
     .highlight {
       color: #e74c3c;
