--- a/garage.html
+++ b/garage.html
@@ -140,9 +140,12 @@
       padding: 25px;
       margin-top: 40px;
     }
+    /* Added CSS rules */
+    header p {
+      color: white !important;
+    }
     footer p {
-      font-style: italic;
-      margin: 5px 0;
+      color: white !important;
     }
   </style>
 </head>
