--- a/bedroom2.html
+++ b/bedroom2.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -30,6 +29,20 @@
     }
     header h1, footer p {
       margin: 5px 0;
+      color: white;
+      text-align: center;
+    }
+    header p {
+      color: white;
+      text-align: center;
+      font-size: 1.1em;
+    }
+    footer p {
+      color: white;
+      text-align: center;
+    }
+    footer em {
+      color: white;
     }
     nav {
       background-color: #34495e;
@@ -177,7 +190,7 @@
 
     <h2>Perfect for Guests or Work-From-Home Living</h2>
     <div class="room-highlight">
-      <p>Bedroom 2 is equipped to serve as more than just a sleeping space. It can easily transform into a cozy guest suite or a focused home office, offering both quiet and comfort. Its adaptable design ensures that no matter your lifestyle, you’ll always have a space that meets your everyday needs.</p>
+      <p>Bedroom 2 is equipped to serve as more than just a sleeping space. It can easily transform into a cozy guest suite or a focused home office, offering both quiet and comfort. Its adaptable design ensures that no matter your lifestyle, you'll always have a space that meets your everyday needs.</p>
     </div>
 
     <a href="page2.html" class="back-button">← Back to Floor Plan</a>
