--- a/dining.html
+++ b/dining.html
@@ -43,8 +43,11 @@
 
         header p {
             font-size: 1.2em;
-            margin: 10px 0 0 0;
+            margin: 10px auto 0 auto;
             font-style: italic;
+            color: white;
+            text-align: center;
+            max-width: none;
         }
 
         /* Navigation Styles */
@@ -199,8 +202,11 @@
 
         footer p {
             text-indent: 0;
-            margin: 5px 0;
+            margin: 5px auto;
             font-style: italic;
+            color: white;
+            text-align: center;
+            max-width: none;
         }
 
         /* Special Text Styles */
