--- a/garage.html
+++ b/garage.html
@@ -140,12 +140,20 @@
       padding: 25px;
       margin-top: 40px;
     }
-    /* Added CSS rules */
+    /* Updated CSS rules for proper centering */
     header p {
       color: white !important;
+      text-align: center !important;
+      text-indent: 0 !important;
+      margin: 0 !important;
+      max-width: none !important;
     }
     footer p {
       color: white !important;
+      text-align: center !important;
+      text-indent: 0 !important;
+      margin: 10px 0 !important;
+      max-width: none !important;
     }
   </style>
 </head>
@@ -202,7 +210,7 @@
       <p>A garage isn't just a parking area—it's a functional part of your home. It offers shelter from the elements, increases home resale value, and provides a clean, accessible area for a wide range of activities. With proper planning, your garage can become a hobby zone, storage area, or even a personal gym.</p>
 
       <div class="highlight-box">
-        <p><strong>Imagine a space that adapts to your needs, grows with your family, and supports your day-to-day tasks seamlessly. That’s what this garage offers—and more.</strong></p>
+        <p><strong>Imagine a space that adapts to your needs, grows with your family, and supports your day-to-day tasks seamlessly. That's what this garage offers—and more.</strong></p>
       </div>
 
       <a href="page2.html" class="back-button">← Back to Floor Plan</a>
